modifiche a varie classi, fino a person, che è esclusa